--- a/index.html
+++ b/index.html
@@ -179,62 +179,50 @@
     </div>
 </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="section-padding">
-        <div class="container">
-            <h2 class="text-center mb-5">Get In Touch</h2>
-            <div class="row">
-                <div class="col-lg-6" data-aos="fade-right">
-                    <form class="contact-form">
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="name" placeholder="Your Name">
-                            <label for="name">Your Name</label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="email" placeholder="Your Email">
-                            <label for="email">Your Email</label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <textarea class="form-control" id="message" placeholder="Your Message" style="height: 150px"></textarea>
-                            <label for="message">Your Message</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Send Message</button>
-                    </form>
-                </div>
-                <div class="col-lg-6" data-aos="fade-left">
-                    <div class="contact-info">
-                        <h3>Contact Information</h3>
-                        <p>Feel free to reach out to me for any questions or opportunities.</p>
-                        <div class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            <span>email@example.com</span>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <span>+1 234 567 890</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
+<!-- Contact Section -->
+<section id="contact" class="section-padding">
+    <div class="container">
+        <h2 class="text-center mb-5">Get In Touch</h2>
+        <div class="row">
+            <div class="col-lg-12 text-center" data-aos="fade-up">
+                <div class="contact-info">
+                   
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/hasyamaulidaa" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="img-fluid social-icon">
+                        </a>
+                        <a href="mailto:hasyamaulidaa16@gmail.com" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Gmail" class="img-fluid social-icon">
+                        </a>
+                        <a href="https://www.linkedin.com/in/hasya-maulida" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg" alt="LinkedIn" class="img-fluid social-icon"> <!-- Logo LinkedIn yang benar -->
+                        </a>
+                        <a href="https://github.com/hsylmldd" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" class="img-fluid social-icon">
+                        </a>
+                        <a href="https://wa.me/+6281996121333" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="img-fluid social-icon">
+                        </a>
                     </div>
-                    <p class="copyright">© 2024 Your Name. All rights reserved.</p>
+                    <p class="email">Lets Connect With me </p>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</section>
 
+   <!-- Footer -->
+<footer class="footer">
+    <div class="decorative-shape-bottom"></div> <!-- Elemen hiasan di bawah -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+            
+                <p class="copyright">© Hasya Maulida. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
