update link anothehr web project

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h4>Mobile App (Latest Project)</h4>
                 <h5>Dermatological AI System for Your Skin (DAISY)</h5>
                 <p>Project DAISY is a project that focused on Indonesian citizen’s dermatological problem. DAISY stands for Dermatological AI System for Your Skin.</p>
-                <a href="#" class="view-doc">View Github Documentation</a>
+                <a href="https://hsylmldd.github.io/Edu-Course/" class="view-doc">View Github Documentation</a>
             </div>
         </div>
     </div>
