--- a/index.html
+++ b/index.html
@@ -155,6 +155,19 @@
       </div>
     </div>
   </section>
+  <div class="col-lg-6 mb-4">
+    <h4>Clinic Management System</h4>
+    <p>Clinic3 is a clinic management system designed to help clinics manage patient records, doctor schedules, appointments, medical history, and billing processes. It streamlines daily operations by storing clinical data digitally, making it easier for staff to access and update information efficiently.
+      This project
+      was designed to simulate a real-world management system clinic service and improve practical understanding of object-oriented
+      programming, and basic database handling in C#.
+    </p>
+    <a href="https://github.com/hsylmldd/Clinic3" class="view-doc">View GitHub Documentation</a>
+  </div>
+</div>
+</div>
+</section>
+
 
   <!-- Pengalaman Kepanitiaan -->
   <section id="pengalaman" class="container section-padding">
