--- a/index.html
+++ b/index.html
@@ -119,35 +119,59 @@
  <!-- Projects Section -->
 <section id="projects" class="section-padding">
   <div class="container">
-    <h2 class="text-center mb-5">Here are some of my projects I have done lately. Feel free to check them out.</h2>
+    <h2 class="text-center mb-5">
+      Here are some of my projects I have done lately. Feel free to check them out.
+    </h2>
     <div class="row">
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="p-3 border rounded h-100">
-          <h4>Kitten Pet Shop</h4>
-          <p>The "web-kitten-petshop" project's initial phase focuses on a compelling landing page designed for pet stores specializing in kitten adoption and sales...</p>
-          <a href="https://hsylmldd.github.io/web-kitten-petshop/" class="view-doc">Go to website</a>
-        </div>
+      <!-- Project 1 -->
+      <div class="col-lg-6 mb-4">
+        <h4>Kitten Pet Shop</h4>
+        <p>
+          The "web-kitten-petshop" project's initial phase focuses on a compelling landing page designed for pet stores
+          specializing in kitten adoption and sales. This entry point allows visitors to immediately browse adorable available
+          kittens and access detailed information about them. The landing page also incorporates user registration and login
+          functionalities for future engagement. Built with HTML, CSS, JavaScript, and Bootstrap, this initial release
+          provides a foundational experience, featuring the homepage, a showcase of available kittens, and dedicated
+          login/registration sections.
+        </p>
+        <a href="https://hsylmldd.github.io/web-kitten-petshop/" class="view-doc">Go to website</a>
       </div>
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="p-3 border rounded h-100">
-          <h4>Simple E-Learning Website (Edu Course)</h4>
-          <p>A static learning platform using HTML, CSS, and JavaScript. This project focused on delivering a clean and intuitive interface...</p>
-          <a href="https://hsylmldd.github.io/Edu-Course/" class="view-doc">Go to website</a>
-        </div>
+
+      <!-- Project 2 -->
+      <div class="col-lg-6 mb-4">
+        <h4>Simple E-Learning Website (Edu Course)</h4>
+        <p>
+          A static learning platform using HTML, CSS, and JavaScript. This project focused on delivering a clean and intuitive
+          interface for learners to easily navigate educational content. Integrated features include organized course listings,
+          and a fully responsive design optimized for various devices. The website emphasizes accessibility and simplicity,
+          making it suitable for independent learners or educational institutions looking for a lightweight, front-end-only
+          solution.
+        </p>
+        <a href="https://hsylmldd.github.io/Edu-Course/" class="view-doc">Go to website</a>
       </div>
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="p-3 border rounded h-100">
-          <h4>Car Rental Application</h4>
-          <p>A desktop-based car rental application using C# with Windows Forms. The app allows users to manage rentals efficiently through a user-friendly interface...</p>
-          <a href="https://github.com/hsylmldd/Rental-Car" class="view-doc">View GitHub Documentation</a>
-        </div>
+
+      <!-- Project 3 -->
+      <div class="col-lg-6 mb-4">
+        <h4>Car Rental Application</h4>
+        <p>
+          A desktop-based car rental application using C# with Windows Forms in Visual Studio. The application allows users
+          to manage vehicle rentals efficiently through a user-friendly interface. Key features include customer registration,
+          vehicle inventory management, rental booking, return tracking, and transaction summaries. The system supports basic
+          CRUD operations for both vehicles and customers, as well as validation features to ensure data accuracy. This project
+          was designed to simulate a real-world car rental service and improve practical understanding of object-oriented
+          programming, form-based application design, and basic database handling in C#.
+        </p>
+        <a href="https://github.com/hsylmldd/Rental-Car" class="view-doc">View GitHub Documentation</a>
       </div>
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="p-3 border rounded h-100">
-          <h4>Clinic Management System</h4>
-          <p>Clinic3 is a clinic management system designed to manage patient records, appointments, and billing processes efficiently using C#...</p>
-          <a href="https://github.com/hsylmldd/Clinic3" class="view-doc">View GitHub Documentation</a>
-        </div>
+
+      <!-- Project 4 -->
+      <div class="col-lg-6 mb-4">
+        <h4>Clinic Management System</h4>
+        <p>
+          Clinic3 is a clinic management system designed to help clinics manage patient records, doctor schedules, appointments, medical history, and billing processes. It streamlines daily operations by storing clinical data digitally, making it easier for staff to access and update information efficiently.
+          This project was designed to simulate a real-world management system clinic service and improve practical understanding of object-oriented programming, and basic database handling in C#.
+        </p>
+        <a href="https://github.com/hsylmldd/Clinic3" class="view-doc">View GitHub Documentation</a>
       </div>
     </div>
   </div>
